Bug 164185 - View -> Boundaries is turned off by default making it impossible to move image + caption frame
Summary: View -> Boundaries is turned off by default making it impossible to move imag...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: highest critical
Assignee: Buovjaga
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: bibisected, bisected, regression
: 164583 165103 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-12-05 13:57 UTC by Telesto
Modified: 2025-10-01 15:17 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (1.05 MB, image/png)
2025-01-07 20:42 UTC, Telesto
Details
Relevance frame for text wrap (1.16 MB, image/png)
2025-01-07 20:50 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2024-12-05 13:57:57 UTC
Description:
View -> Boundaries is turned off by default making it impossible to move image + caption frame

Steps to Reproduce:
1. Open attachment 197788 [details] (bug 164045 )
2. Notice Figure 1 on page 1, having a caption frame without a border.
3. Try to move the image + caption frame around (without turning Boundaries on)

This actually a part of what the user is complaining about in bug 164045. The user started moving images by cut/copy

Actual Results:
View -> Boundaries is turned of by default since recently, causing the caption frame to be out of sight.


Expected Results:
No clue if the change was intention, but the side-effect is pretty user unfriendly.
1) Exclude the caption frame from boundary's
2) Turn boundary's back on


Reproducible: Always


User Profile Reset: No

Additional Info:
Found in
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 94afced0195ef824e575176e33c79ca57484cd5c
CPU threads: 4; OS: Windows 8.1 X86_64 (6.3 build 9600); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

not in
Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 898d5d470e24a55556f2fb244fec24df33ba8855
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: threaded
Comment 1 Buovjaga 2025-01-05 08:53:56 UTC
I suppose it's after bug 163856.
Comment 2 Buovjaga 2025-01-05 08:54:04 UTC
*** Bug 164583 has been marked as a duplicate of this bug. ***
Comment 3 Heiko Tietze 2025-01-06 07:38:04 UTC
I still can select the frame and move the object even when the border line is hidden. And even for the plain indication I prefer the clean look over the educational hint. My take: NAB.
Comment 4 Telesto 2025-01-06 09:24:51 UTC
(In reply to Heiko Tietze from comment #3)
> I still can select the frame and move the object even when the border line
> is hidden. 

True. Not sure how you managed to find to border proper area to click for the image with a caption frame

>And even for the plain indication I prefer the clean look over
>the educational hint. My take: NAB.

If i desire a clean look I disable View -> Boundaries or render a print preview. This is terrible annoying while editing.

Main use case is creating/editing. Not viewing/reading stuff requiring a clean like

See also bug 164045
Comment 5 Heiko Tietze 2025-01-07 10:45:25 UTC
(In reply to Telesto from comment #4)
> This is terrible annoying while editing.
Assuming you move objects around a lot. I'm against changing the default - you can enable the option easily.
Comment 6 Telesto 2025-01-07 19:00:50 UTC
(In reply to Heiko Tietze from comment #5)
> (In reply to Telesto from comment #4)
> > This is terrible annoying while editing.
> Assuming you move objects around a lot. I'm against changing the default -
> you can enable the option easily.

If you know where to look.

A) A workflow where you consciously disable showing (caption) frames makes more sense compared to hiding the frame. Making people unaware of the existence of a frame which you can move. Combined by no clue you don't even know what to toggle on.

B) Aside frame the fact that you can drag a image outside a frame. So caption frame not being around the image

C) The frame is also of relevance for wrapping settings


D) By hiding the frame by default you get descriptions like bug 164045 comment 0


@Eyal
Any opinion on the matter?
Comment 7 Buovjaga 2025-01-07 19:02:31 UTC
It's true that we already get reports from people confused about this default while 25.2 is not even final yet: bug 164618
Comment 8 Eyal Rozenberg 2025-01-07 19:46:10 UTC
(In reply to Heiko Tietze from comment #3)
> I still can select the frame and move the object even when the border line
> is hidden.

Same here, with 24.8 and w. But... with a 25.8 nightly, I get boundaries drawn because of bug 164438: The images don't render and I get placeholders instead; see screenshot in attachment 198420 [details].

(In reply to Heiko Tietze from comment #5)
> (In reply to Telesto from comment #4)
> > This is terrible annoying while editing.
> Assuming you move objects around a lot. I'm against changing the default -
> you can enable the option easily.

You nearly _always_ move images in frames when they are not positioned as characters. So, it is indeed a problem for the default - for this kind of frames - to be boundaries off. I'm not saying there are no arguments for the change though. I'm sorry I didn't attend the discussion about this change :-(

> A) A workflow where you consciously disable showing (caption) frames makes
> more sense compared to hiding the frame. Making people unaware of the
> existence of a frame which you can move. Combined by no clue you don't even
> know what to toggle on.

Well, maybe; but you also have the opposite problem: How will novice users know that frame is non-printing? And that it's possible to remove it?

> B) Aside frame the fact that you can drag a image outside a frame. So
> caption frame not being around the image

I'm having trouble parsing these two sentences, please rephrase/fix the grammer :-(

> C) The frame is also of relevance for wrapping settings

It is, but I don't understand how this bears on what Heiko said.


> D) By hiding the frame by default you get descriptions like bug 164045
> comment 0

Let's quote that explicitly: That comment is "It always seems difficult to move a picture in writer". And the poster explains how, instead of moving caption frames, he recreates them elsewhere. Yikes! I can't say how common that experience is, but the movable-object-within-frame is itself difficult for notices; and if the frames are not drawn it is even more difficult. BTW, when they are drawn - their sides overlapping also makes it a bit more difficult for novices to understand what's going on.

> @Eyal
> Any opinion on the matter?

First, I can't say I'm happy that the visibility of all boundaries is now a single option.

But - Maybe we should think outside the binary of just showing/hiding the boundaries by default?

e.g. one or more of

1. Show boundary on...
  1.1 hover over the boundary
  1.2 hover over object
  1.3 loiter over object
  1.4 intersection of any selection and the object (e.g. selecting text in the caption)
2. When the boundary does not show, highlight/colorize area
  2.1 hover over the boundary
  2.2 hover over object
  2.3 loiter over object
  2.4 intersection of any selection and the object (e.g. selecting text in the caption)
3. Add a "show boundaries" option (local or global) to the relevant context menus

just thinking out loud here.
Comment 9 Telesto 2025-01-07 20:42:17 UTC
Created attachment 198421 [details]
Screenshot

(In reply to Eyal Rozenberg from comment #8)
> > B) Aside frame the fact that you can drag a image outside a frame. So
> > caption frame not being around the image
> 
> I'm having trouble parsing these two sentences, please rephrase/fix the
> grammer :-(

The image and caption frame don't act like a grouped object, sadly. So clicking in the middle of the caption frame - so on the image - will select image not the frame. Resulting in the risk of dragging the image around, instead of the frame. This problem exacerbated by hiding the caption frame. It's going from bad to worse for now

Screenshot: Image anchored in frame, but moved outside the frame.
Comment 10 Telesto 2025-01-07 20:50:12 UTC
Created attachment 198422 [details]
Relevance frame for text wrap

Frame border is also relevant right click context menu to set text wrap. Clicking the image inside the frame will apply text wrap for the image itself. The being able to click frame border matters. Disabling the border by default suggests it doesn't

Story would be different image caption frame and image would be some kind of grouped object. Where you could only access the image when entering the group, but this isn't the case (yet)
Comment 11 Buovjaga 2025-01-08 05:43:32 UTC
(In reply to Eyal Rozenberg from comment #8)
> First, I can't say I'm happy that the visibility of all boundaries is now a
> single option.

It's not a single option. You control it in more detail via Tools - Options - Writer - Formatting Aids: Object Boundaries.
Comment 12 Roman Kuznetsov 2025-01-09 11:39:47 UTC
Please enable the boundaries by default. It can be hard to handle some table without borders for me now
Comment 13 Heiko Tietze 2025-01-15 08:43:24 UTC
Solving bug 164605 actually and not this request.
Comment 14 Commit Notification 2025-01-16 09:25:42 UTC Comment hidden (off-topic)
Comment 15 Heiko Tietze 2025-01-16 09:27:23 UTC Comment hidden (off-topic)
Comment 16 Justin L 2025-01-18 19:55:23 UTC
(In reply to Roman Kuznetsov from comment #12)
> Please enable the boundaries by default. 
+1. Boundaries highly desirable for header/footer as well, and even body text.
Comment 17 Buovjaga 2025-01-18 20:15:48 UTC
Pressure is building, so let's do it.
Comment 18 Xisco Faulí 2025-01-29 23:59:54 UTC
When doing - Table - Insert table - Ok - nothing is displayed on the document even though the table is there.

Regression introduced by:

commit f40dc496a511ae06a308dd0859bc3aad28a8ec7e	[log]
author	Heiko Tietze <tietze.heiko@gmail.com>	Thu Nov 07 16:12:56 2024 +0100
committer	Heiko Tietze <heiko.tietze@documentfoundation.org>	Wed Nov 20 16:56:07 2024 +0100
tree b8c7e7658f194316dcee6fced0f9a4ae5fed39ab
parent c635271eb17e3b9d50223356dbc09b771fcd643f [diff]

Resolves tdf#163856 - Disentangle boundaries options
Comment 19 Commit Notification 2025-01-30 13:57:35 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/39c50d9aedc1721ec5ffaa4568b668171e0342bf

tdf#164185 Activate View - Boundaries in Writer by default

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2025-01-30 14:52:52 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/af70c7038540837e04f670750bd820fe79702859

tdf#164185 Activate View - Boundaries in Writer by default

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Buovjaga 2025-01-30 15:00:04 UTC
Done and dusted.
Comment 22 Xisco Faulí 2025-02-07 14:31:21 UTC
*** Bug 165103 has been marked as a duplicate of this bug. ***
Comment 23 Xisco Faulí 2025-02-17 14:48:33 UTC
*** Bug 165292 has been marked as a duplicate of this bug. ***