Resolves tdf#164185 & tdf#89420 - Show text boundaries in Draw

Show margins by default and hide per expert setting
Draw::Misc::TextObject::ShowBoundary

This patch reverts/improves I3e31bec65ab34772bd2f8137be7e5e5258758184

Change-Id: I177ab0491e85aea327a512ab9d336949ddfa6e3c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179995
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit 8b5d4c360c359adf787d466164377c05ac8f7d14)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188129
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Aron Budea <aron.budea@collabora.com>