include/svx/svdmodel.hxx
@@ -250,6 +250,7 @@ private:
     // used to disable unique name checking during page move
     bool mbMakePageObjectsNamesUnique = true;
     bool m_bIsImpress = false;
+    bool m_bShowMargin = true;
 
 public:
     SVX_DLLPRIVATE virtual bool IsCreatingDataObj() const { return false; }
@@ -258,6 +259,8 @@ public:
     bool     IsPasteResize() const        { return m_bPasteResize; }
     bool     IsImpress() const { return m_bIsImpress; }
     void     SetImpress(bool bIsImpress) { m_bIsImpress = bIsImpress; };
+    bool     IsShowMargin() const { return m_bShowMargin; }
+    void     SetShowMargin(bool bShowMargin) { m_bShowMargin = bShowMargin; }
     void     SetPasteResize(bool bOn) { m_bPasteResize=bOn; }
     // If a custom Pool is put here, the class will call methods
     // on it (Put(), Remove()). On disposal of SdrModel the pool
